--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CINOLA"]
 	path = CINOLA
-	url = https://git.ad.fh-bielefeld.de/CMSE/sbekemeier/_git/CINOLA-binary-distribution
+	url = https://github.com/s4b7r/CINOLA-binary-distribution.git
